@@ -1,3 +1,4 @@
+02 Mar 2008 re-disable SenseID on 8809,3410,3420 (breaks MTS) - Ivan Warren 
 29 Feb 2008 Fix TRAP in z/arch mode - Paul Leisy
 29 Feb 2008 Added feature parsing_enhancement_facility - Bernard
 28 Feb 2008 Fix RP in z/arch mode and mode switch trace - Paul Leisy
